# aistreamradio

./: .dockerignore  .env.example  .gitignore  Dockerfile  MEMORY.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tasks.md
app/: config.py  database.py  icy.py  logging_config.py  main.py  models.py  schemas.py
app/Configuration/: __init__.py  auth_config.py  config.py  logging_config.py
app/models/: __init__.py  album.py  artist.py  auth.py  genre.py  song.py  song_artist.py  song_rating.py  station.py  user.py
app/repositories/: __init__.py  albums.py  artists.py  deps.py  genres.py  songs.py  stations.py  users.py
app/routers/: __init__.py  auth.py  genres.py  health.py  itunes.py  songs.py  stations.py
app/schemas/: auth.py
app/services/: auth_service.py  itunes.py
app/static/: index.html
app/utilities/: __init__.py  auth.py  (+3 more)
certs/: cert.pem  key.pem
data/: initial_stations.json
documentation/: Authentication_Recommendation..md  Authentication_Requirements.md  OAuth_Provider_Setup_Guide.md  design_update.md  requirements_album_metadata_lookup.md  system_documentation.md  tasks_authentication.md  technical_spec_album_metadata_lookup.md  technical_spec_authentication.md
tests/: conftest.py  test_auth_router.py  test_auth_service.py  test_disliked_songs_integration.py  test_icy_unit.py  test_itunes_service.py  test_song_rating_integration.py  test_song_rating_persistence.py  test_song_rating_unit.py  test_static_assets_integration.py  test_stations_integration.py  test_stations_unit.py  test_user_song_rating.py
(+9 files in other folders)
