[project]
name = "radiostation"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "email-validator>=2.0.0",
    "httpx>=0.28.1",
    "authlib>=1.3.0",
    "pyjwt>=2.8.0",
    "itsdangerous>=2.2.0",
    "slowapi>=0.1.10",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
]
